# mlops

./: .gitignore  README.md
lab1/: data_preprocessing.py  model_preparation.py  model_testing.py  pipeline.sh
lab2/mlops-task2 from zip/: data_creation.py  model_preparation.py  pipeline.sh  pyproject.toml  trained_model.pickle
lab2/mlops-task2 from zip/test/: test_data.csv
lab2/mlops-task2 from zip/test_processed/: X_test.csv  y_test.csv
lab2/mlops-task2 from zip/train/: train_data.csv
lab2/mlops-task2 from zip/train_processed/: X_train.csv  y_train.csv
lab3/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
lab5/: MLOPS_PR5.ipynb
